cmake_minimum_required(VERSION 3.19)
project(DS)

set(CMAKE_CXX_STANDARD 14)

add_executable(DS main.cpp "DSAImplementation/linkedlists.h" "LinkedList/LLPartition_Med.h" LinkedList/LLFolding_Med.h LinkedList/LLInterleaving_Med.h LinkedList/LLSwapNode_Med.h LinkedList/LLAddtwo.h LinkedList/LLtoInt_Easy.h LinkedList/LLlength.h LinkedList/LLDeletetarget.h LinkedList/LLCheckSort.h LinkedList/LLJumps_Easy.h DSAImplementation/trees.h)